<resources>
    <string name="app_name">Deto</string>
    <!--This string is to give the activity or fragment a title -->
    <string name="title_home">Home</string>
    <string name="title_detection">Deteksi</string>
    <string name="title_account">Akun</string>
    <string name="title_about">Tentang Tumor</string>
    <string name="title_article">Artikel Tumor</string>
    <string name="title_hospitals">Rumah Sakit</string>
    <string name="title_preference">Rujukan</string>

    <!--This String to give a button or text a String -->
    <string name="show_all">Lihat Semua</string>
    <string name="hello">Hallo, %s </string>
    <string name="what_do_you_need">Perlu Bantuan apa?</string>
    <string name="search_hospitals">Cari Rumah Sakit</string>
    <string name="logout">Keluar</string>

    <!--This string is for AboutActivity -->
    <string name="about">Tentang</string>
    <string name="indication">Gejala</string>
    <string name="treatment">Obat</string>
    <string name="risk">Resiko</string>

    <!-- This string is for Article -->
    <string name="search_article">Cari Artikel</string>
    <string name="article_title">Judul Artikel</string>
    <string name="article_content">Isi Artikel</string>

    <!-- This string is for Hospital -->
    <string name="hospitals_name">Nama Rumah Sakit</string>
    <string name="hospitals_address">Alamat</string>
    <string name="hospitals_telephone">Telepon</string>
    <string name="hospitals_rute">Rute</string>
    <string name="hospitals_web">Situs Web</string>

    <!-- this String is for Tumor Detection-->
    <string name="take_photo">Ambil Photo</string>
    <string name="take_from_file">Ambil File</string>
    <string name="checking_the_tumor">Lakukan Pengecekan Tumor</string>
    <string name="analysis_text">Dari Analisa yang kami lakukan, hasilnya: </string>
    <string name="tumor_type">Jenis Tumor : %s</string>
    <string name="tumor_desc">Deskripsi : %s</string>
    <string name="do_preference">Lakukan Rujukan</string>
    <string name="back_to_home">Kembali Ke Home</string>

    <!--this String is for Register Preference -->
    <string name="register_preference">Daftar Rujukan</string>
    <string name="text_preference">Silahkan isi Data Rujukan</string>
    <string name="pasien_name">Nama Pasien</string>
    <string name="pasien_email">Email</string>
    <string name="pasien_phone">Phone</string>
    <string name="pasien_relativ">Nama Kerabat</string>
    <string name="pasien_reason">Alasan</string>
    <string name="tumor_data">Data Tumor</string>
    <string name="upload_file">Upload Bukti</string>
    <string name="register">Daftar</string>
    <string name="tumor_photo">Tumor Photo</string>
    <string name="normal">Normal</string>
    <string name="checking_result">Hasil Pemeriksaan</string>

    <string-array name="hospitals">
        <item>RS Sari Asih Karawaci</item>
        <item>RS Sari Asih Sangiang</item>
        <item>RS Awal Bros Tangerang</item>
        <item>RS Mayapada Tangerang</item>
        <item>RS Ciputra Citra Garden City</item>
        <item>RS Mata Aini Prof. Dr. Isak Salim</item>
        <item>RS Umum Pusat Fatmawati</item>
        <item>RS Mitra Keluarga Kalideres</item>
        <item>RS Mitra Keluarga Bintaro</item>
        <item>RS Premier Bintaro</item>
    </string-array>

    <string name="login">Login</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="thank_you">Terima Kasih</string>
    <string name="text_pleasewait">Silahkan Tunggu Kabar dari Pihak Rumah sakit, Petugas Rumah Sakit Akan Menghubungi anda Segera.</string>
    <string name="photo_tumor_detection">Foto Deteksi Tumor</string>
    <string name="photo_detection_desc">Deteksi tumor melalui foto untuk mendapatkan hasil pengujian akurat dengan waktu yang singkat</string>
    <string name="skip">Skip</string>
    <string name="next">Lanjut</string>
    <string name="preference_to_hospitals">Rujukan ke Rumah Sakit</string>
    <string name="prefere_hospitals_desc">Rujukan Rumah Sakit terdekat untuk mendapatkan penanganan cepat</string>
    <string name="about_tumor">Tentang Tumor</string>
    <string name="about_tumor_desc">Penjelasan tentang tumor mengenal gejala dan pengobatan alternatif</string>
    <string name="go_login">Yuk Login</string>
    <string name="login_register_page">Halaman Login/Register</string>
    <string name="login_register_desc">Silahkan Login/Register Sebelum Masuk</string>
    <string name="login_with_google">Login With Google</string>
    <string name="dummy_name">Hendrawan Wibowo Jatmiko</string>
    <string name="dummy_email">hendrawanwib@gmail.com</string>
    <string name="dummy_name_home">Halo, Hendrawan Wibowo Jatmiko</string>
    <string name="what_you_need">Perlu Bantuan Apa?</string>
    <string name="password">Password</string>
    <string name="name">Nama</string>
    <string name="retype_password">Re-Type Password</string>
</resources>