<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <TextView
        android:id="@+id/textView9"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/lora_bold"
        android:maxLines="1"
        android:text="@string/dummy_name_home"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/lora_bold"
        android:text="@string/what_you_need"
        android:textColor="@color/black"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnAbout"
        android:layout_width="170dp"
        android:layout_height="100dp"
        android:paddingTop="15dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:drawableTop="@drawable/ic_about"
        android:text="@string/about_tumor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnPreference"
        android:layout_width="170dp"
        android:layout_height="100dp"
        android:layout_marginTop="40dp"
        android:paddingTop="15dp"
        android:drawableTop="@drawable/ic_form"
        android:text="@string/title_preference"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnAbout"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/btnAbout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_hospitals"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:fontFamily="@font/lora_bold"
            android:layout_gravity="start"/>

        <TextView
            android:id="@+id/btnHospitals"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/show_all"
            android:gravity="end"
            android:layout_gravity="bottom"
            android:textColor="@color/black"
            android:fontFamily="@font/lora_regular"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>